--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,10 @@
 ---
 galaxy_info:
+  role_name: memcached
   author: Nicolas Boutet
   description: Install and configure memcached.
   license: MIT
-  min_ansible_version: 2.6
+  min_ansible_version: 2.7
   platforms:
     - name: Ubuntu
       versions:
@@ -11,8 +12,11 @@ galaxy_info:
         - focal
     - name: Debian
       versions:
-        - stretch
         - buster
+        - stretch
   galaxy_tags:
+    - cache
+    - caching
+    - database
     - memcached
 dependencies: []
