--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   role_name: memcached
+  namespace: boutetnico
   author: Nicolas Boutet
   description: Install and configure memcached.
   license: MIT
